# rust-cat

./: .gitignore  Anchor.toml  BLOG-ORIGIN-STORY.md  IMPLEMENTATION-SUMMARY.md  QUICKSTART.md  README.md  package.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.d.ts
frontend/src/assets/styles/: global.css
frontend/src/components/: Blog.vue  CreateProject.vue  CreeateProject.vue  HeroOverlay.vue  Leaderboard.vue  PixelDashboard.vue  ProjectDashboard.vue  ProjectDetails.vue  SideNavigation.vue  Waitlist.vue  WalletInfo.vue  WalletModal.vue
frontend/src/composables/: useAnchorProject.ts  useRateLimiter.ts  useSupabase.ts  useWalletVerification.ts
frontend/src/idl/: garden_sol.json
frontend/src/router/: index.ts
programs/garden_sol/: Cargo.toml
programs/garden_sol/src/: lib.rs
tests/: garden_sol.ts
