[package]
name = "garden_sol"
version = "0.1.0"
description = "Garden SOL - Web3 Project Management with Crypto Bounties"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "garden_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
